2006-07-05 12:32 Mike Park  <mike.park@nasa.gov>

	* src/FAKEGeom.c rewound to previous version, needed for unit tests

2006-07-05 14:40 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.13 Release. For Tin-Chee. Fixed up INSTALL directions.

2006-07-05 14:30 Mike Park  <mike.park@nasa.gov>

	* INSTALL to clearify FUN3D FAKEGeom usage.

2006-07-05 14:18 Mike Park  <mike.park@nasa.gov>

	* src/FAKEGeom.c stripped out all code to be really fake.

2006-06-27 15:45 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.12 Release. For Pawel MSL RCS work on Columbia. 
	To include gridRemoveTwoFaceCell,gridRemoveThreeFaceCell 
	parallel bug fixes.

2006-03-31 20:31 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridRemoveTwoFaceCell,gridRemoveThreeFaceCell)
	to prevent two nearby removals from iterfering, call
	queueNewTrasaction before changing concectivities. other swap and
	insert ops use gridmpi to call queueNewTransaction for them, but
	this call shouldb emoved down to alower level.

2006-03-31 15:50 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridRemoveThreeFaceCell) to remove hanging ghost
	nodes in the case that there are only one local node.

2006-03-31 10:15 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridRemoveTwoFaceCell) to fix a parallelization
	check and to increase simularity between gridRemoveTwoFaceCell and
	gridRemoveThreeFaceCell commonNodes and uncommonNodes are now
	local cell indexes and facenodes are correctly mapped to node ids.

2006-03-30  9:00 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridRemoveThreeFaceCell) to correctly reset
	facenodes before creating new face.

2006-03-30  8:43 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridRemoveThreeFaceCell) fixed the creatation of
	hanging nodes (nodes not connected to any cells) by removing
	common node after removing cell. The hanging node caused the
	adjoint to NaN on the second iteration and was detected by
	repartying the grid with seq party.
